<resources>
    <string name="app_name">NekretnineApp</string>

    <string name="toolbar_name">Nekretnine</string>

    <string name="nekretnine_indentifikator">Identifikator:</string>
    <string name="nekretnine_naziv">Naziv:</string>
    <string name="nekretnine_opis">Opis:</string>
    <string name="nekretnine_adresa">Adresa:</string>
    <string name="nekretnine_broj_telefona">Broj telefona:</string>
    <string name="nekretnine_kvadratura">Kvadratura:</string>
    <string name="nekretnine_broj_soba">Broj soba:</string>
    <string name="nekretnine_cena">Cena:</string>
    <string name="nekretnine_unesi_podatke">Unesite podatke:</string>

    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>

    <string name="button_choose_image">Choose Image</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
</resources>
